# molecule-sdk-python

./: .ci-recovery-marker-1778442674.txt  .gitignore  .verify-fix-1778444420.txt  CLAUDE.md  README.md  known-issues.md  pr-description-draft.md  pyproject.toml
.claude/: settings.json
.gitea/: sop-checklist-config.yaml
.gitea/scripts/: gitea-merge-queue.py  sop-checklist-gate.py
.gitea/workflows/: auto-promote-staging.yml  ci.yml  gitea-merge-queue.yml  publish.yml  sop-checklist-gate.yml
.github/workflows/: auto-promote-staging.yml
examples/remote-agent/: README.md  run.py
molecule_agent/: README.md  __init__.py  __main__.py  a2a_server.py  client.py  inbound.py
molecule_ai_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
molecule_plugin/: __init__.py  __main__.py  builtins.py  manifest.py  org.py  workspace.py
src/molecule_sdk/: __init__.py  _client.py  errors.py  models.py  sync.py  workspace.py
template/: plugin.yaml
template/adapters/: claude_code.py  deepagents.py
template/skills/example-skill/: SKILL.md
tests/: TEST_GAP_ANALYSIS.md  conftest.py  test_a2a_server.py  test_call_peer_errors.py  test_cli_connect.py  test_inbound.py  test_remote_agent.py  test_retry_backoff.py  test_safe_extract.py  test_sdk.py  test_sha256_verification.py  test_validators.py
tests/integration/: test_workspace.py
tests/unit/: test_errors.py  test_models.py  test_workspace.py
