[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molecule-sdk-python"
dynamic = ["version"]
description = "Python SDK for the Molecule AI platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0,<1.0",
    "pydantic>=2.0",
    "anyio>=4.0",
]

# KI-005: a2a-sdk 0.3->1.x migration is deferred; SDK wraps HTTP only and does
# NOT import a2a-sdk directly. httpx is pinned <1.0 as a precaution until httpx
# 1.x compatibility is confirmed.
# known_issues = ["KI-005: a2a-sdk migration deferred; see known-issues.md #5"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.hatch.version]
path = "src/molecule_sdk/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/molecule_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["molecule_sdk"]
